// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationBanner > should render correctly 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="govuk-notification-banner-title"
    class="govuk-notification-banner"
    data-module="govuk-notification-banner"
    role="region"
  >
    <div
      class="govuk-notification-banner__header"
    >
      <h2
        class="govuk-notification-banner__title"
        id="govuk-notification-banner-title"
      >
        Important
      </h2>
    </div>
    <div
      class="govuk-notification-banner__content"
    >
      <p
        class="govuk-notification-banner__heading"
      >
        Banner Text
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationBanner > should render correctly with link 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="govuk-notification-banner-title"
    class="govuk-notification-banner"
    data-module="govuk-notification-banner"
    role="region"
  >
    <div
      class="govuk-notification-banner__header"
    >
      <h2
        class="govuk-notification-banner__title"
        id="govuk-notification-banner-title"
      >
        Very Important
      </h2>
    </div>
    <div
      class="govuk-notification-banner__content"
    >
      <p
        class="govuk-notification-banner__heading"
      >
        Banner Text
        <a
          class="govuk-notification-banner__link"
          href="www.google.com"
        >
          look here
        </a>
        .
      </p>
    </div>
  </div>
</DocumentFragment>
`;
